<resources>
    <string name="app_name">Rumah Ikan</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_hint">Enter your username</string>
    <string name="btn_login">Login</string>
    <string name="password_hint">Enter your password</string>
    <string name="no_acccount">Have no account?</string>
    <string name="name_hint">Enter your name</string>
    <string name="passwordConfirm_hint">Confirm your password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="back">Back</string>
    <string name="email_hint">Enter your e-mail</string>
    <string name="default_web_client_id"><![CDATA[<string name=\"default_web_client_id\" translatable=\"false\">https://rumah-ikan-d47a8-default-rtdb.firebaseio.com</string>]]></string>
    <string name="emailTaken">Email has already registered, please try again</string>
    <string name="accountSuccessCreated">Account successfully created</string>
    <string name="emailFormatWrong">Email not an email format</string>
    <string name="nameNone">Please fill your name</string>
    <string name="passwordNotMatch">Password doesn\'t match</string>
    <string name="passwordLess">Password less than 8 character</string>
    <string name="emailNone">Please fill your e-mail</string>
    <string name="passwordNone">Please your password</string>
    <string name="invalidLogin">Enter your account data correctly!</string>
    <string name="rumah_ikan_logo">Rumah Ikan Logo</string>
    <string name="passwordConfirmNone">Please fill your password confirmation</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hello">Hello</string>
    <string name="user">User Name</string>
    <string name="adding_drum">Adding Drum</string>
    <string name="user_profile">User Profile</string>
    <string name="btn_add_bucket">Add Bucket</string>
    <string name="button_scan">Button Scan</string>
    <string name="name_of_bucket">Name of Bucket</string>
    <string name="detect_disease">Detect Fish Disease</string>
    <string name="image_for_drum">Image for Drum</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="image_scan_result">Image Scan Result</string>
    <string name="scan_disease">Scan Fish Disease</string>
    <string name="add_fish_bucket">Add Fish Bucket</string>
    <string name="result">Result :</string>
    <string name="disease_result">Result of Fish Disease Detection</string>
    <string name="tryAgain">Try Again</string>
    <string name="timeout">Timeout</string>
    <string name="warningAddImage">Please upload photo</string>
    <string name="warningAddBucketName">Please fill the bucket name</string>
    <string name="package_name">capstone.bangkit.rumahikan</string>
    <string name="choose_picture">Choose picture</string>
    <string name="message">Message : </string>
    <string name="get_result">Get Result</string>
    <string name="fish_bucket">Fish Bucket</string>
    <string name="log_activity">Log Activity</string>
    <string name="fish_needs">Fish Needs</string>
    <string name="fish_lovers">Fish Lovers</string>
    <string name="rumah_ikan">Rumah Ikan</string>
    <string name="making_aquaculture_easier">Making Aquaculture Easier</string>
    <string name="note_add_fish_bucket">Note: Take a picture of a fish bucket using the camera or from the gallery and press the \"Add Bucket\" button.</string>
    <string name="note_scan_fish_disease">Note: Take a picture of a fish using the camera or from the gallery and press the \"Get Result\" button.</string>
    <string name="note_fish_detect">Note: The results of this fish disease detection may not be accurate, as it is still under development.</string>
    <string name="error_upload">Error while uploading</string>
    <string name="upload_failed">Upload failed</string>
    <string name="upload_success">Upload Success</string>
    <string name="yes">Yes</string>
    <string name="logout">Log Out</string>
    <string name="logoutDescription">Are you sure want to log out?</string>
    <string name="cancelLogout">Cancel</string>
    <string name="SuccessLogout">Logged out succesfully</string>
</resources>