<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/logo_rumahikan"
            android:layout_width="275dp"
            android:layout_height="274dp"
            android:src="@drawable/rumahikanlogo"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/rumah_ikan_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_below="@+id/logo_rumahikan"
            android:layout_marginTop="30dp">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/signup"
                style="@style/login"
                android:gravity="top"
                android:textColor="@color/blue"
                android:fontFamily="@font/poppins_bold"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:id="@+id/layout_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@id/tv_signup"
                android:hint="@string/name_hint"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/blue"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <capstone.bangkit.rumahikan.customview.NameCustomView
                    android:padding="12dp"
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:fontFamily="@font/poppins"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:id="@+id/layout_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@id/layout_name"
                android:hint="@string/email_hint"
                android:textColorHint="@color/blue"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <capstone.bangkit.rumahikan.customview.EmailCustomView
                    android:padding="12dp"
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:fontFamily="@font/poppins"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:id="@+id/layout_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@id/layout_email"
                android:hint="@string/password_hint"
                android:textColorHint="@color/blue"
                app:boxBackgroundColor="@color/white"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <capstone.bangkit.rumahikan.customview.PasswordCustomeView
                    android:padding="12dp"
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:fontFamily="@font/poppins"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:id="@+id/layout_passwordConfirm"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@id/layout_password"
                android:hint="@string/passwordConfirm_hint"
                android:textColorHint="@color/blue"
                app:boxBackgroundColor="@color/white"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <capstone.bangkit.rumahikan.customview.IsPasswordSameCustomView
                    android:padding="12dp"
                    android:id="@+id/input_passwordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:fontFamily="@font/poppins"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                android:layout_width="330dp"
                android:layout_height="55dp"
                app:backgroundTint="@color/yellow"
                android:text="@string/btn_signup"
                android:textColor="@color/blue"
                android:layout_below="@id/layout_passwordConfirm"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_signup"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/no_acccount"
                android:textColor="@color/blue"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="32dp"
                android:layout_toEndOf="@+id/no_account"
                android:layout_alignTop="@id/no_account"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btn_login"
                android:textColor="@color/blue" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</ScrollView>